Make Compare Tests Page.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "@mui/x-charts": "^6.0.0-alpha.7",
     "@mui/x-date-pickers": "^6.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,10 +20,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
+    "react-charts": "^3.0.0-beta.55",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "rsuite": "^5.38.0",
     "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4"
   },
