--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
     "@mui/x-charts": "^6.0.0-alpha.7",
@@ -15,8 +19,10 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.3",
     "dayjs": "^1.11.9",
+    "install": "^0.13.0",
     "material-react-table": "^1.14.0",
     "mui": "^0.0.1",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
