--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.3",
+    "dateformat": "^5.0.3",
     "dayjs": "^1.11.9",
     "install": "^0.13.0",
     "material-react-table": "^1.14.0",
